REST API_kakao 토큰요청에 대한 응답 값 체크까지 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
     url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Seoul
     username: cos
     password: cos1234
+  devtools:
+    livereload:
+      enabled: true
     
   jpa:   
     open-in-view: true
